--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'World War, 1914-1918 -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The Wonder of War on Land
 url: http://www.gutenberg.org/ebooks/45462
